<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtResultOcean"
        android:layout_width="361dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/dream_ocean_description"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/txtOcupancy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtResultOcean"
        android:layout_marginBottom="98dp"
        android:text="@string/dream_ocean_ocupancy"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResultOcean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <ImageView
        android:id="@+id/imgOcean"
        android:layout_width="186dp"
        android:layout_height="126dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtResultOcean"
        android:layout_marginBottom="118dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toTopOf="@+id/txtOcupancy2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/dreamocean" />

    <TextView
        android:id="@+id/txtTotalPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtNight2"
        android:layout_marginBottom="136dp"
        android:text="@string/total_price2"
        app:layout_constraintBottom_toTopOf="@+id/txtResultOcean"
        app:layout_constraintStart_toEndOf="@+id/imgOcean" />

    <TextView
        android:id="@+id/txtNight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txtDreamResultPN2"
        android:layout_marginEnd="112dp"
        android:text="@string/per_night2"
        app:layout_constraintBottom_toTopOf="@+id/txtTotalPrice2"
        app:layout_constraintStart_toEndOf="@+id/imgOcean"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtDreamResultPN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultOcean"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="197dp"
        android:text="@string/txtresultpn2"
        app:layout_constraintBottom_toTopOf="@+id/txtResultTotal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/txtNight2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/txtResultTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultOcean"
        android:layout_alignTop="@+id/txtTotalPrice2"
        android:text="@string/txtresulttotal2"
        app:layout_constraintBottom_toTopOf="@+id/txtResultOcean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtTotalPrice2" />

</RelativeLayout>