<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtResultSuit3"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:text="@string/dream_suit_description"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/txtOcupancy3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imgSuit"
        android:layout_marginBottom="82dp"
        android:text="@string/dream_suit_ocupancy"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResultSuit3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <ImageView
        android:id="@+id/imgSuit"
        android:layout_width="186dp"
        android:layout_height="126dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="107dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toTopOf="@+id/txtOcupancy3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/dreamsuit" />

    <TextView
        android:id="@+id/txtTotalPrice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="108dp"
        android:text="@string/total_price3"
        app:layout_constraintBottom_toTopOf="@+id/txtResultSuit3"
        app:layout_constraintStart_toEndOf="@+id/imgSuit" />

    <TextView
        android:id="@+id/txtNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtTotalPrice3"
        android:layout_alignTop="@+id/txtDreamResultPN3"
        android:text="@string/per_night3"
        app:layout_constraintBottom_toTopOf="@+id/txtTotalPrice3"
        app:layout_constraintStart_toEndOf="@+id/imgSuit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Per Night:" />

    <TextView
        android:id="@+id/txtDreamResultPN3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultSuit3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="184dp"
        android:text="@string/txtresultpn3"
        app:layout_constraintBottom_toTopOf="@+id/txtResultTotal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/txtNight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/txtResultTotal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultSuit3"
        android:layout_alignTop="@+id/txtTotalPrice3"
        android:text="@string/txtresulttotal3"
        app:layout_constraintBottom_toTopOf="@+id/txtResultSuit3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtTotalPrice3" />

</RelativeLayout>