<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DisneyDream_Price">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgTitle"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/txtChild1"
                android:layout_toStartOf="@+id/txtChild1"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gradientdream" />

            <TextView
                android:id="@+id/txtDream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:background="#07ffffff"
                android:text="Disney Dream"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="serif-monospace" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="59dp"
                android:text="Check Prices"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnNight"
                android:layout_width="306dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="121dp"
                android:background="#73FFFFFF"
                android:radius="20dp" />

            <Spinner
                android:id="@+id/spnDay"
                android:layout_width="306dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="178dp"
                android:background="#73FFFFFF" />

            <TextView
                android:id="@+id/txtAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnPlusAdult"
                android:layout_alignBottom="@+id/btnPlusAdult"
                android:layout_alignEnd="@+id/txtAdult1"
                android:layout_alignRight="@+id/txtAdult1"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="13dp"
                android:text="0" />

            <Button
                android:id="@+id/btnMinusAdult"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp"
                android:background="@android:drawable/btn_minus" />

            <Button
                android:id="@+id/btnPlusAdult"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView"
                android:background="@android:drawable/btn_plus" />

            <Button
                android:id="@+id/btnMinusChild"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="126dp"
                android:background="@android:drawable/btn_minus" />

            <Button
                android:id="@+id/btnPlusChild"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:background="@android:drawable/btn_plus" />

            <TextView
                android:id="@+id/txtAdult1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnMinusAdult"
                android:layout_toStartOf="@+id/textView"
                android:text="Adult" />

            <TextView
                android:id="@+id/txtChild1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnMinusAdult"
                android:layout_marginStart="-126dp"
                android:layout_toEndOf="@+id/btnMinusChild"
                android:text="Child" />

            <TextView
                android:id="@+id/txtChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/txtAdult"
                android:layout_marginEnd="106dp"
                android:text="0" />

        </RelativeLayout>


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar"
        android:layout_marginBottom="33dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />
    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/btnUpdatePrice"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:text="See the Price Before Pay" />

    <Button
        android:id="@+id/btnSendInvoice"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="Create Invoice" />

</RelativeLayout>